--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --testPathPattern=./src/",
-    "build":  "webpack-dev-server --config webpack",
+    "build":  "webpack --mode production",
     "start": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint",
     "coverage": "jest --coverage",
