--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --testPathPattern=./src/",
-    "build":  "webpack --mode production",
+    "build": "webpack --mode production",
     "start": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint",
     "coverage": "jest --coverage",
     "e2e": "jest --testPathPattern=./e2e/ --runInBand",
     "doc": "jsdoc -c jsdoc.conf.json"
-},
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/maria-namira/events1.git"
@@ -26,7 +26,8 @@
     "eslint": "^8.31.0",
     "eslint-plugin-react": "^7.31.11",
     "http-server": "^14.1.1",
-    "live-server": "^0.9.1"
+    "live-server": "^0.9.1",
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
     "babel-loader": "^9.1.2",
