--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "jest --testPathPattern=./e2e/ --runInBand",
     "doc": "jsdoc -c jsdoc.conf.json"
   },
-  "author": "Sergius92739",
+  "author": "",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.15.7",
