--- a/package.json
+++ b/package.json
@@ -4,49 +4,34 @@
   "description": "\"\"",
   "main": "index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-    "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
-    "lint": "eslint .",
     "test": "jest --testPathPattern=./src/",
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development",
+    "start": "webpack-dev-server --config webpack.dev.js",
+    "lint": "eslint",
     "coverage": "jest --coverage",
     "e2e": "jest --testPathPattern=./e2e/ --runInBand",
     "doc": "jsdoc -c jsdoc.conf.json"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/maria-namira/events1.git"
+  },
+  "author": "\"maria-namira\"",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/maria-namira/events1/issues"
+  },
+  "homepage": "https://github.com/maria-namira/events1#readme",
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/preset-env": "^7.15.6",
-    "@types/jest": "^27.0.1",
-    "babel-jest": "^27.2.1",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^9.0.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.3.0",
-    "css-minimizer-webpack-plugin": "^3.0.2",
-    "css-mqpacker": "^7.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "html-webpack-plugin": "^5.3.2",
-    "jest": "^26.6.3",
-    "jsdoc": "^3.6.7",
-    "mini-css-extract-plugin": "^2.3.0",
-    "node-sass": "^6.0.1",
-    "postcss-loader": "^6.1.1",
-    "postcss-preset-env": "^6.7.0",
-    "puppeteer": "^10.2.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "terser-webpack-plugin": "^5.2.4",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.1"
+    "eslint": "^8.31.0",
+    "eslint-plugin-react": "^7.31.11",
+    "http-server": "^14.1.1",
+    "live-server": "^0.9.1",
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "core-js": "^3.18.0"
+    "babel-loader": "^9.1.2",
+    "webpack": "^5.75.0"
   }
 }
