--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --testPathPattern=./src/",
-   "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+   "build": "webpack --mode production",
+    "dev": "webpack --mode development",
+    "start": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint",
     "coverage": "jest --coverage",
     "e2e": "jest --testPathPattern=./e2e/ --runInBand",
