--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.31.11",
     "http-server": "^14.1.1",
     "live-server": "^0.9.1",
+    "sass-resources-loader": "^2.2.5",
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
