--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "events1",
   "version": "1.0.0",
   "description": "\"\"",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest --testPathPattern=./src/",
    "build": "webpack --mode production",
