--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "\"\"",
   "main": "src/index.js",
   "scripts": {
+   "build": "webpack --config webpack.dev.js",
     "test": "jest --testPathPattern=./src/",
-   "build": "webpack --mode production",
-    "dev": "webpack --mode development",
-    "start": "webpack-dev-server --config webpack.dev.js",
+    "dev": "webpack serve",
+    "start": "webpack server --config webpack.dev.js",
     "lint": "eslint",
     "coverage": "jest --coverage",
     "e2e": "jest --testPathPattern=./e2e/ --runInBand",
-    "doc": "jsdoc -c jsdoc.conf.json"
+    "doc": "jsdoc -c jsdoc.conf.json",
+    "preshow:doc": "npm run doc",
+    "show:doc": "live-server doc",
+    "preshow:dist": "npm run build",
+    "show:dist": "live-server dist",
+    "preshow:coverage": "npm run coverage",
+    "show:coverage": "live-server coverage/lcov-report"
   },
   "repository": {
     "type": "git",
