--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "events1",
-  "version": "1.0.0",
-  "description": "\"\"",
+  "name": "ahj-events1 ",
+  version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
@@ -12,31 +12,8 @@
     "e2e": "jest --testPathPattern=./e2e/ --runInBand",
     "doc": "jsdoc -c jsdoc.conf.json"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/maria-namira/events1.git"
-  },
-  "author": "\"maria-namira\"",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/maria-namira/events1/issues"
-  },
-  "homepage": "https://github.com/maria-namira/events1#readme",
-  "devDependencies": {
-    "eslint": "^8.31.0",
-    "eslint-plugin-react": "^7.31.11",
-    "http-server": "^14.1.1",
-    "live-server": "^0.9.1",
-    "sass-resources-loader": "^2.2.5",
-    "webpack-cli": "^5.0.1"
-  },
-  "dependencies": {
-    "babel-loader": "^9.1.2",
-    "cross-env": "^7.0.3",
-    "webpack": "^5.75.0"
-  },
-   "keywords": [],
-  "author": "maria-namira",
+  "keywords": [],
+  "author": "",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.15.7",
@@ -68,6 +45,9 @@
     "terser-webpack-plugin": "^5.2.4",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.2.1"
   },
+  "dependencies": {
+    "core-js": "^3.18.0"
+  }
 }
